--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -145,6 +146,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -326,6 +328,7 @@ allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
+allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.152;
 allow 185.220.101.153;
@@ -362,7 +365,6 @@ allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
-allow 185.220.101.184;
 allow 185.220.101.185;
 allow 185.220.101.186;
 allow 185.220.101.187;
@@ -941,7 +943,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -965,7 +966,6 @@ allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -1191,6 +1191,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
+allow 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1296,14 +1297,11 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1354,12 +1352,10 @@ allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
-allow 2a0b:f4c2:1::131;
 allow 2a0b:f4c2:1::132;
 allow 2a0b:f4c2:1::133;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
-allow 2a0b:f4c2:1::136;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
@@ -1373,6 +1369,7 @@ allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
+allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
@@ -1406,7 +1403,6 @@ allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
-allow 2a0b:f4c2:1::184;
 allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
@@ -1536,7 +1532,6 @@ allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
-allow 2a12:5940:1733::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
@@ -1567,7 +1562,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 3.90.170.1;
+allow 3.93.89.194;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1756,9 +1751,6 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.54.51.61;
-allow 84.54.51.68;
-allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.215.76.62;
@@ -1783,7 +1775,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
-allow 89.208.106.13;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.153;
