--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,7 +127,6 @@ deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -352,6 +351,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
+deny 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -457,14 +457,11 @@ deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
-deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
 deny 2a05:b0c7:6b72::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -515,12 +512,10 @@ deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
-deny 2a0b:f4c2:1::131;
 deny 2a0b:f4c2:1::132;
 deny 2a0b:f4c2:1::133;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
-deny 2a0b:f4c2:1::136;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
@@ -534,6 +529,7 @@ deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
+deny 2a0b:f4c2:1::150;
 deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
@@ -567,7 +563,6 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::184;
 deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
@@ -697,7 +692,6 @@ deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
-deny 2a12:5940:1733::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
