--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -145,6 +146,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 156.146.63.143;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -326,6 +328,7 @@ set_real_ip_from 185.220.101.147;
 set_real_ip_from 185.220.101.148;
 set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
+set_real_ip_from 185.220.101.150;
 set_real_ip_from 185.220.101.151;
 set_real_ip_from 185.220.101.152;
 set_real_ip_from 185.220.101.153;
@@ -362,7 +365,6 @@ set_real_ip_from 185.220.101.180;
 set_real_ip_from 185.220.101.181;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
-set_real_ip_from 185.220.101.184;
 set_real_ip_from 185.220.101.185;
 set_real_ip_from 185.220.101.186;
 set_real_ip_from 185.220.101.187;
@@ -941,7 +943,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
@@ -965,7 +966,6 @@ set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0d::f03c:94ff:fe42:512f;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -1191,6 +1191,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7a7:2:3c17:216:3cff:fe40:efc;
+set_real_ip_from 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1296,14 +1297,11 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
-set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1354,12 +1352,10 @@ set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
-set_real_ip_from 2a0b:f4c2:1::131;
 set_real_ip_from 2a0b:f4c2:1::132;
 set_real_ip_from 2a0b:f4c2:1::133;
 set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::135;
-set_real_ip_from 2a0b:f4c2:1::136;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
 set_real_ip_from 2a0b:f4c2:1::139;
@@ -1373,6 +1369,7 @@ set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
 set_real_ip_from 2a0b:f4c2:1::148;
 set_real_ip_from 2a0b:f4c2:1::149;
+set_real_ip_from 2a0b:f4c2:1::150;
 set_real_ip_from 2a0b:f4c2:1::151;
 set_real_ip_from 2a0b:f4c2:1::152;
 set_real_ip_from 2a0b:f4c2:1::153;
@@ -1406,7 +1403,6 @@ set_real_ip_from 2a0b:f4c2:1::180;
 set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
-set_real_ip_from 2a0b:f4c2:1::184;
 set_real_ip_from 2a0b:f4c2:1::185;
 set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
@@ -1536,7 +1532,6 @@ set_real_ip_from 2a11:840:6:1b::b3a1:6b14;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
-set_real_ip_from 2a12:5940:1733::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
@@ -1567,7 +1562,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.90.170.1;
+set_real_ip_from 3.93.89.194;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1756,9 +1751,6 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
-set_real_ip_from 84.54.51.61;
-set_real_ip_from 84.54.51.68;
-set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
 set_real_ip_from 85.215.76.62;
@@ -1783,7 +1775,6 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
-set_real_ip_from 89.208.106.13;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.153;
