--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -175,6 +174,7 @@ allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.214.41;
 allow 172.233.16.74;
+allow 172.81.131.156;
 allow 172.81.132.242;
 allow 173.232.195.137;
 allow 173.232.195.144;
@@ -215,7 +215,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.214.118.240;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -256,7 +255,6 @@ allow 185.146.232.243;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -860,7 +858,9 @@ allow 204.8.96.170;
 allow 204.8.96.171;
 allow 204.8.96.172;
 allow 204.8.96.173;
+allow 204.8.96.174;
 allow 204.8.96.175;
+allow 204.8.96.176;
 allow 204.8.96.177;
 allow 204.8.96.178;
 allow 204.8.96.179;
@@ -870,14 +870,18 @@ allow 204.8.96.182;
 allow 204.8.96.183;
 allow 204.8.96.184;
 allow 204.8.96.185;
+allow 204.8.96.186;
 allow 204.8.96.187;
 allow 204.8.96.188;
+allow 204.8.96.189;
 allow 204.8.96.64;
 allow 204.8.96.65;
+allow 204.8.96.66;
 allow 204.8.96.67;
 allow 204.8.96.68;
 allow 204.8.96.69;
 allow 204.8.96.70;
+allow 204.8.96.71;
 allow 204.8.96.72;
 allow 204.8.96.73;
 allow 204.8.96.74;
@@ -963,6 +967,7 @@ allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
+allow 23.23.79.182;
 allow 23.26.133.239;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1155,7 +1160,9 @@ allow 2620:7:6001::170;
 allow 2620:7:6001::171;
 allow 2620:7:6001::172;
 allow 2620:7:6001::173;
+allow 2620:7:6001::174;
 allow 2620:7:6001::175;
+allow 2620:7:6001::176;
 allow 2620:7:6001::177;
 allow 2620:7:6001::178;
 allow 2620:7:6001::179;
@@ -1165,15 +1172,19 @@ allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
+allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
+allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
 allow 2620:7:6001::ffff:c759:e641;
+allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
 allow 2620:7:6001::ffff:c759:e645;
 allow 2620:7:6001::ffff:c759:e646;
+allow 2620:7:6001::ffff:c759:e647;
 allow 2620:7:6001::ffff:c759:e648;
 allow 2620:7:6001::ffff:c759:e649;
 allow 2620:7:6001::ffff:c759:e64a;
@@ -1317,12 +1328,14 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1777,7 +1790,6 @@ allow 82.153.138.48;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.26.9.159;
@@ -1788,6 +1800,8 @@ allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.54.51.61;
+allow 84.54.51.68;
+allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.215.76.62;
