--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -297,7 +297,9 @@ allow 2620:7:6001::170;
 allow 2620:7:6001::171;
 allow 2620:7:6001::172;
 allow 2620:7:6001::173;
+allow 2620:7:6001::174;
 allow 2620:7:6001::175;
+allow 2620:7:6001::176;
 allow 2620:7:6001::177;
 allow 2620:7:6001::178;
 allow 2620:7:6001::179;
@@ -307,15 +309,19 @@ allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
+allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
+allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
 allow 2620:7:6001::ffff:c759:e641;
+allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
 allow 2620:7:6001::ffff:c759:e645;
 allow 2620:7:6001::ffff:c759:e646;
+allow 2620:7:6001::ffff:c759:e647;
 allow 2620:7:6001::ffff:c759:e648;
 allow 2620:7:6001::ffff:c759:e649;
 allow 2620:7:6001::ffff:c759:e64a;
@@ -458,12 +464,14 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
