--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -175,6 +174,7 @@ set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.233.16.74;
+set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.242;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
@@ -215,7 +215,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.214.118.240;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -256,7 +255,6 @@ set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -860,7 +858,9 @@ set_real_ip_from 204.8.96.170;
 set_real_ip_from 204.8.96.171;
 set_real_ip_from 204.8.96.172;
 set_real_ip_from 204.8.96.173;
+set_real_ip_from 204.8.96.174;
 set_real_ip_from 204.8.96.175;
+set_real_ip_from 204.8.96.176;
 set_real_ip_from 204.8.96.177;
 set_real_ip_from 204.8.96.178;
 set_real_ip_from 204.8.96.179;
@@ -870,14 +870,18 @@ set_real_ip_from 204.8.96.182;
 set_real_ip_from 204.8.96.183;
 set_real_ip_from 204.8.96.184;
 set_real_ip_from 204.8.96.185;
+set_real_ip_from 204.8.96.186;
 set_real_ip_from 204.8.96.187;
 set_real_ip_from 204.8.96.188;
+set_real_ip_from 204.8.96.189;
 set_real_ip_from 204.8.96.64;
 set_real_ip_from 204.8.96.65;
+set_real_ip_from 204.8.96.66;
 set_real_ip_from 204.8.96.67;
 set_real_ip_from 204.8.96.68;
 set_real_ip_from 204.8.96.69;
 set_real_ip_from 204.8.96.70;
+set_real_ip_from 204.8.96.71;
 set_real_ip_from 204.8.96.72;
 set_real_ip_from 204.8.96.73;
 set_real_ip_from 204.8.96.74;
@@ -963,6 +967,7 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
+set_real_ip_from 23.23.79.182;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
@@ -1155,7 +1160,9 @@ set_real_ip_from 2620:7:6001::170;
 set_real_ip_from 2620:7:6001::171;
 set_real_ip_from 2620:7:6001::172;
 set_real_ip_from 2620:7:6001::173;
+set_real_ip_from 2620:7:6001::174;
 set_real_ip_from 2620:7:6001::175;
+set_real_ip_from 2620:7:6001::176;
 set_real_ip_from 2620:7:6001::177;
 set_real_ip_from 2620:7:6001::178;
 set_real_ip_from 2620:7:6001::179;
@@ -1165,15 +1172,19 @@ set_real_ip_from 2620:7:6001::182;
 set_real_ip_from 2620:7:6001::183;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
+set_real_ip_from 2620:7:6001::186;
 set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
+set_real_ip_from 2620:7:6001::189;
 set_real_ip_from 2620:7:6001::e664;
 set_real_ip_from 2620:7:6001::ffff:c759:e640;
 set_real_ip_from 2620:7:6001::ffff:c759:e641;
+set_real_ip_from 2620:7:6001::ffff:c759:e642;
 set_real_ip_from 2620:7:6001::ffff:c759:e643;
 set_real_ip_from 2620:7:6001::ffff:c759:e644;
 set_real_ip_from 2620:7:6001::ffff:c759:e645;
 set_real_ip_from 2620:7:6001::ffff:c759:e646;
+set_real_ip_from 2620:7:6001::ffff:c759:e647;
 set_real_ip_from 2620:7:6001::ffff:c759:e648;
 set_real_ip_from 2620:7:6001::ffff:c759:e649;
 set_real_ip_from 2620:7:6001::ffff:c759:e64a;
@@ -1317,12 +1328,14 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1777,7 +1790,6 @@ set_real_ip_from 82.153.138.48;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.26.9.159;
@@ -1788,6 +1800,8 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.54.51.61;
+set_real_ip_from 84.54.51.68;
+set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
 set_real_ip_from 85.215.76.62;
