--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -297,7 +297,9 @@ set_real_ip_from 2620:7:6001::170;
 set_real_ip_from 2620:7:6001::171;
 set_real_ip_from 2620:7:6001::172;
 set_real_ip_from 2620:7:6001::173;
+set_real_ip_from 2620:7:6001::174;
 set_real_ip_from 2620:7:6001::175;
+set_real_ip_from 2620:7:6001::176;
 set_real_ip_from 2620:7:6001::177;
 set_real_ip_from 2620:7:6001::178;
 set_real_ip_from 2620:7:6001::179;
@@ -307,15 +309,19 @@ set_real_ip_from 2620:7:6001::182;
 set_real_ip_from 2620:7:6001::183;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
+set_real_ip_from 2620:7:6001::186;
 set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
+set_real_ip_from 2620:7:6001::189;
 set_real_ip_from 2620:7:6001::e664;
 set_real_ip_from 2620:7:6001::ffff:c759:e640;
 set_real_ip_from 2620:7:6001::ffff:c759:e641;
+set_real_ip_from 2620:7:6001::ffff:c759:e642;
 set_real_ip_from 2620:7:6001::ffff:c759:e643;
 set_real_ip_from 2620:7:6001::ffff:c759:e644;
 set_real_ip_from 2620:7:6001::ffff:c759:e645;
 set_real_ip_from 2620:7:6001::ffff:c759:e646;
+set_real_ip_from 2620:7:6001::ffff:c759:e647;
 set_real_ip_from 2620:7:6001::ffff:c759:e648;
 set_real_ip_from 2620:7:6001::ffff:c759:e649;
 set_real_ip_from 2620:7:6001::ffff:c759:e64a;
@@ -458,12 +464,14 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
